﻿			wxFormBuilder ChangeLog
************************************************************************
date Version 3.00.44 (Beta 3)
* Fixed FS#193 - "Missing wxTE_PROCESS_ENTER in style of wxComboBox."

05-29-2007 Version 3.00.43 (Beta 3)
^ Updated to wxFlatNotebook 2.2 - building with wx2.6.x is no longer supported.
  All notebooks can now be configured by right-clicking in empty area of tab bar.
* Fixed FS#190 - "annoying warning with wxTR_HIDE_ROOT in wxTreeCtrl"
+ Implemented FS#185 - "Allowing access to wxStdDialogButtonSizer buttons."
+ Added many more properties to wxGrid.
  This includes FS#191 - "Editing wxGrid column properties in the designer."
* Fixed xrc import of sizeritem, stringlist properties, and wxStdDialogButtonSizer.
  This was a regresssion in version 3.00.40.

05-21-2007 Version 3.00.42 (Beta 3)
+ Added Right-Click -> "Close Preview" to XRC Previews.
  Also much improved the effect of the ESC key in GTK.
+ Added wxRichTextCtrl

05-11-2007 Version 3.00.41 (Beta 3)
* Fixed FS#176 - "Dialog/Frame preview always displays all close/minimize/maximize buttons"
   Could probably still use some tweaking for the proper behavior in GTK.
* Fixed FS#179 - "OnPaint for wxPanel"
   Moved the OnPaint and OnBackgroundErase events to the common events.
* Fixed the wildly inefficient code for choosing the platform's EOL character.
   Significantly improves code generation (to file) time for larger projects.
  
05-04-2007 Version 3.00.40 (Beta 3)
+ Implemented FS#53 - "Copy/Paste between instances of wxFB"
  See "Copy Object To Clipboard" and "Paste Object from Clipboard" in the "Edit" menu.
  Note: You can copy an object from wxFB and paste it as xml wherever you can paste text.
+ Implemented FS#129 - "Controling control alignment from the keyboard."
+ Implemented FS#135 - "Disabling the delete (Ctrl+D) option in the project's popup menu."
^ Replaced all code using TiXml classes with ticpp classes.