@@ -39,6 +39,7 @@
       <option name="wxST_NO_AUTORESIZE" help="By default, the control will adjust its size to exactly fit to the size of the text when SetLabel is called. If this style flag is given, the control will not change its size (this style is especially useful with controls which also have wxALIGN_RIGHT or CENTER style because otherwise they won't make sense any longer after a call to SetLabel)."/>
     </property>
     <property name="label" type="wxString_i18n">MyLabel</property>
+    <property name="wrap" type="int" help="Wraps the control's label so that each of its lines becomes at most this many pixels wide if possible (the lines are broken at words boundaries so it might not be the case if words are too long). If width is negative, no wrapping is done.">-1</property>
   </objectinfo>
 
   <objectinfo class="wxTextCtrl" icon="text_ctrl.xpm" type="widget">
