@@ -2,6 +2,7 @@
 ************************************************************************
 date Version 3.00.44 (Beta 3)
 * Fixed FS#193 - "Missing wxTE_PROCESS_ENTER in style of wxComboBox."
++ Added wxStaticText::Wrap().
 
 05-29-2007 Version 3.00.43 (Beta 3)
 ^ Updated to wxFlatNotebook 2.2 - building with wx2.6.x is no longer supported.
